# streaker

./: .gitignore  Cargo.toml  Dockerfile  README.mkd
.circleci/: config.yml
access-node/: Dockerfile  post_attribution
access-node/app/: start.sh
access-node/app/resources/: application-acceptance.yml  application.yml  git.properties  logback.xml
backend/: .env  .gitignore  Cargo.toml
backend/helm/streaker/: values.yaml
backend/helm/streaker/templates/: hpa.yaml  service.yaml  serviceaccount.yaml
backend/kube/: cluster-issuer-test.yml  cluster-issuer.yml  deployment.yml  ingress.yml  service-account.yml  service.yml
backend/migrations/: 000_initial.sql
backend/public/css/: style.css.map
backend/scss/: _login.scss  style.scss
backend/src/: dbstate.rs  jwt.rs  lib.rs  main.rs  migrate.rs  streaker_client.rs  testdb.rs  testutil.rs  web.rs
backend/src/migrations/: V1__members_table.rs
backend/src/model/: anode.rs  member.rs  mod.rs  scan.rs  scan_session.rs
backend/src/web/: anode.rs  token.rs  ws.rs
backend/src/web/anode/: login.rs  scan.rs
backend/src/web/page/: components.rs  index.rs  login.rs
backend/tests/: anode.rs  streaker.rs
common/: Cargo.toml
common/src/: lib.rs  rewards_program.rs  streak_logic.rs  ws.rs
docker/rust-build/: Dockerfile
frontend/: Cargo.toml
frontend/scss/: _dashboard.scss  _index.scss  _login.scss  _menu.scss  _scan.scss  _shared.scss  style.scss
frontend/src/: app.rs  browser_detect.rs  config.rs  lib.rs  partials.rs  qrcode.rs  route.rs  util.rs
frontend/src/components/: clock.rs  flash.rs  footer.rs  header.rs  menu.rs  mod.rs
frontend/src/route/: dashboard.rs  index.rs  login.rs  scan.rs  scan_complete.rs
frontend/src/services/: api.rs  token.rs
frontend/src/util/: raw_html.rs
frontend/static/: aerobatic.yml  browser_detect.js  config.json  index.html  package.json
frontend/static/css/: style.css  style.css.map
helm/: production_issuer.yaml
helm/streaker/: Chart.yaml  values.yaml
helm/streaker/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml
helm/streaker/templates/tests/: test-connection.yaml
migrate/: Cargo.toml
migrate/migrations/: 000_initial.sql  001_add_skipped_to_scans.sql
migrate/src/: lib.rs  main.rs
public/css/: style.css  style.css.map
scss/: _grid.scss  _index.scss  style.scss
src/: main.rs  web.rs
src/page/: index.rs
src/web/: page.rs
src/web/page/: components.rs  index.rs  login.rs
