[package]
name = "streaker"
version = "0.1.0"
authors = ["Boy Maas <boy.maas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.3"
tokio = { version = "0.2", features = ["fs", "stream", "sync", "time", "macros"] }
pretty_env_logger = "0.4.0"
ctrlc = "3.1.4"
qrcode-generator = "1.0.6"
jsonwebtoken = "7.1.2"
uuid = {version="0.8.1", features=["serde", "v4"]}
chrono = "0.4.13"
serde = "1.0.114"
serde_json = "1.0.55"
dotenv = "0.15.0"
lazy_static = "1.4.0"
anyhow = "1.0.31"
futures = "0.3.5"
log = "0.4.8"
streaker-common = {version = "0.1.0", path="../common"}
sqlx = {version = "0.3.5", default-features = false, features=["runtime-tokio", "macros", "postgres", "uuid", "chrono", "json"]}
barrel = { version = "0.6.5", features = ["pg"] }
url = "2.1.1"
sqlx-pg-migrate = "1.0.4"
include_dir = "0.6.0"
thiserror = "1.0.20"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

[[bin]]
name = "streaker"
path = "src/main.rs"
