[package]
name = "streaker-common"
version = "0.1.0"
authors = ["Boy Maas <boy.maas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
chrono = { version = "0.4.13", features = ["serde"] }
uuid = "0.8.1"
