[package]
name = "streaker-common"
version = "0.1.0"
authors = ["Boy Maas <boy.maas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.114", features = ["derive"]}
chrono = { version = "0.4.13", features = ["serde"] }
uuid = {version="0.8.1", features=["serde", "v4"]}
# needs to be this version, newer version 
# of time does not support date arithmetic
time = "0.1.43"
