[package]
name = "streaker-frontend"
version = "0.1.0"
authors = ["Boy Maas <boy.maas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# We choose web_sys due to its support form the Rust WASM Working Group
[dependencies]
yew = "0.16.2"
wasm-bindgen = "0.2"
yew-router = { version="0.13.0", features=["web_sys"] }
qrcode-generator = "1.0.6"
url = "2.1.1"
lazy_static = "1.4.0"
anyhow = "1.0.31"
log = "0.4.8"
serde_json = "1.0.55"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
]

